manifests/service-app-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-v1
spec:
  selector:
    app: my-app
    version: v1
  ports:
  - port: 80
    targetPort: 80
