manifests/service-app-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-v2
spec:
  selector:
    app: my-app
    version: v2
  ports:
  - port: 80
    targetPort: 80
