manifests/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traffic-split
  annotations:
    alb.ingress.kubernetes.io/group.name: traffic-split
    alb.ingress.kubernetes.io/load-balancer-name: traffic-split
    alb.ingress.kubernetes.io/security-groups: sg-1234567abcdef
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/actions.canary: |
      {
        "type": "forward",
        "forwardConfig": {
          "targetGroups": [
            {"serviceName": "app-v1", "servicePort": 80, "weight": 90},
            {"serviceName": "app-v2", "servicePort": 80, "weight": 10}
          ]
        }
      }
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - backend:
              service:
                name: canary
                port:
                  name: use-annotation
            pathType: ImplementationSpecific
